changed title font size

--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@ p {color: red;}
 .background {background-color: gray}
 
 p {
-	font-size: 19px;
+	font-size: 17px;
+	font-family: "Comic Sans MS";
+}
+
+p {
+	font-size: 17px;
+	font-family: "Comic Sans MS";
+}
+
+p {
+	font-size: 17px;
+	font-family: "Comic Sans MS";
 }
 
